# lobster

./: .gitignore  Makefile  README.md  Vagrantfile  release.sh  shell.sh
SCD/: Makefile  Setup.hs  scd.cabal
SCD/checkpolicy/: Makefile
SCD/libsepol-2.0.41/src/: .gitignore
SCD/src/Data/: HeadTail.hs  MapSet.hs  NonEmptyList.hs
SCD/src/SCD/Analysis/: XML.hs  scd-xml.cabal
SCD/src/SCD/Lobster/: GenPrelude.hs  Symbolic.hs  Util.hs
SCD/src/SCD/Lobster/Symbolic/: Combine.hs  Lobster.hs
SCD/src/SCD/M4/: CheckTypeStmt.hs  Dependencies.hs  Errors.hs  HTML.hs  Kind.hs  KindCheck.hs  KindCheckPolicy.hs  KindInfo.hs  Lexer.x  ModuleFiles.hs  Options.hs  PShow.hs  Parser.y  PrettyPrint.hs  QuickMain.hs  Subst.hs  Syntax.hs  Util.hs  XML.hs
SCD/src/SCD/M4/CallGraph/: callgraph.cabal
SCD/src/SCD/M4/Test/: Dependencies.hs  ErrorSuite.hs  HTML.hs  KindCheck.hs  Parser.hs  QuickLobster.hs
SCD/src/SCD/SELinux/: Authorize.hs  Lexer.x  Parser.y  PrettyPrint.hs  Symbol.hs  Syntax.hs
SCD/src/SCD/SELinux/Test/: Authorize.hs  Parser.hs  Symbol.hs
SCD/src/SCD/Shrimp/: Shrimp.hs
SCD/src/SCD/Shrimp/RefPolicy/Modules/Services/: Dbus.hs
SCD/src/SCD/Test/: All.hs
SCD/src/System/Posix/: Interaction.hs
SCD/src/Test/QuickCheck/: Fail.hs
SCD/src/Text/Happy/: ParserMonad.hs
SCD/src/Text/ParserCombinators/: PolyReadP.hs
SCD/testsrc/SCD/M4/Test/: ErrorSuite.hs  Parser.hs
SCD/testsrc/SCD/SELinux/Test/: Authorize.hs  Parser.hs  Symbol.hs
SCD/testsrc/SCD/Test/: All.hs
SCD/testsrc/Test/QuickCheck/: Generate.hs
docs/api/: Makefile  galois-proposal.cls  v3spa-lobster.md
docs/lobster/: .gitignore  Makefile  modules.md
docs/phase2-report/: Makefile  phase2-report.md
genLobster/: Main.hs  Makefile  genLobster.cabal  m4-lobster.hs  selinux-lobster.hs  stack.yaml
genLobster/src/: CoreSyn.hs  M4ToLobster.hs  M4ToLobster2.hs
genLobster/src/M4ToLobster/: Error.hs
genLobster/tests/: test.hs
iptables-helpers/: iptables-helpers.cabal
iptables-helpers/src/: Iptables.hs  Test.hs
iptables-helpers/src/Iptables/: Parser.hs  Print.hs  Types.hs
iptables-helpers/src/Iptables/Types/: Arbitrary.hs
iptables-lobster/: README  conditionals.lsr  design.md  emptyuserchain.iptables  emptyuserchain.lsr  example.iptables  example.lsr  ftp-manual.lsr  ftp.iptables  ftp.lsr  highlevel-sketch.graffle  iptables-lobster.cabal  stack.yaml  unimplemented.iptables
iptables-lobster/main/: Main.hs
iptables-lobster/src/: IptablesToLobster.hs
iptables-lobster/test/: Main.hs
lobster/: Makefile  Setup.hs  lobster.cabal
lobster-core/: lobster-core.cabal
lobster-core/src/Lobster/: Core.hs
lobster-core/src/Lobster/Core/: AST.hs  Error.hs  Eval.hs  JSON.hs  Lexer.x  Parser.y  Pretty.hs  Traverse.hs  TypeCheck.hs  Util.hs
lobster-core/tests/: EvalTest.hs  Fixtures.hs  LexTest.hs  ParseTest.hs  eval-test.hs  lex-test.hs  lobster-json.hs  parse-test.hs  path-test.hs  pp-test.hs  test.hs
lobster-core/tests/examples/: example12.lsr  example14.lsr  example22.lsr  example23.lsr  example27.lsr  example31.lsr  example45.lsr  example9.lsr  modules.lsr
lobster-iptables/: design.md  example.lsr  ftp.lsr
lobster-selinux/: LICENSE  lobster-selinux.cabal  stack.yaml
lobster-selinux/src/Lobster/: SELinux.hs
lobster-selinux/src/Lobster/SELinux/: Export.hs  Filter.hs  Main.hs  SELinux.hs
lobster-selinux/src/Lobster/SELinux/Test/: Main.hs  SELinux.hs
lobster-selinux/test/examples/: example1.lsr  example2.lsr  example3.lsr  example4.lsr
lobster-selinux/tests/: lobster-selinux.hs
lobster/src/Lobster/: AST.hs  Common.hs  Domain.hs  Dot.hs  ErrMonad.hs  Error.hs  JSON.hs  Lexer.x  Monad.hs  Parser.y  Policy.hs  PrettyPrint.hs  Symbion.hs  Syntax.hs  Version.hs  lobster-parser-test.cabal
lobster/src/Lobster/Test/: Main.hs  Policy.hs  Symbion.hs  lobster-test.cabal
lobster/test/examples/: error1.lsr  error10.lsr  error11.lsr  error12.lsr  error13.lsr  error14.lsr  error15.lsr  error16.lsr  error17.lsr  error18.lsr  error19.lsr  error2.lsr  error20.lsr  error21.lsr  error22.lsr  error23.lsr  error24.lsr  error25.lsr  error26.lsr  error27.lsr  error28.lsr  error29.lsr  error3.lsr  error30.lsr  error31.lsr  error32.lsr  error33.lsr  error34.lsr  error35.lsr  error36.lsr  error37.lsr  error38.lsr  error39.lsr  error4.lsr  error40.lsr  error41.lsr  error42.lsr  error43.lsr  error44.lsr  error45.lsr  (+55 more)
lobster/testsrc/: Main.hs  Policy.hs  Symbion.hs  Test.hs  lobster-dot.hs  lobster-json.hs
misc/: errors.hs
v3spa-server/: HEADER  LICENSE  Makefile  empty.json  stack.yaml  test.json  v3spa-server.cabal
v3spa-server/data/refpolicy/20130424/policy/: booleans.conf  modules.conf
v3spa-server/data/refpolicy/20130424/policy/modules/contrib/: djbdns.te  dspam.te  rsync.if  tftp.te
v3spa-server/data/refpolicy/20130424/policy/modules/kernel/: corenetwork.te
v3spa-server/data/refpolicy/20130424/policy/modules/services/: xserver.te
v3spa-server/data/refpolicy/20140311/policy/modules/contrib/: djbdns.te  dspam.te  mysql.if  tftp.if
v3spa-server/data/refpolicy/20140311/policy/modules/services/: xserver.te
v3spa-server/data/refpolicy/minimal/: build.conf  subattributes
v3spa-server/data/refpolicy/minimal/doc/: policy.xml
v3spa-server/data/refpolicy/minimal/policy/modules/contrib/: apache.if  apache.te
v3spa-server/data/refpolicy/minimal/policy/modules/kernel/: corecommands.fc  corecommands.te  corenetwork.if  corenetwork.te  domain.if  domain.te  files.if  files.te  kernel.if  kernel.te
v3spa-server/data/refpolicy/minimal/policy/modules/services/: ssh.if  xserver.if
v3spa-server/data/refpolicy/minimal/policy/modules/system/: application.te  init.if  init.te  iptables.if  miscfiles.if  miscfiles.te  unconfined.if  unconfined.te  userdomain.if  userdomain.te
v3spa-server/src/: Main.hs  V3SPAObject.hs  Version.hs  test.hs
v3spa-server/src/V3SPA/Server/: Parse.hs  Paths.hs  Project.hs  ProjectResource.hs  Snap.hs  Version.hs
v3spa-server/src/V3SPA/Server/Export/: SELinux.hs
v3spa-server/src/V3SPA/Server/Import/: IPTables.hs  SELinux.hs
vagrant/: provision.sh
