Name:                genLobster
Version:             0.1
Description:         shrimp to lobster reverse compilation
License:             AllRightsReserved
License-file:        LICENSE
Author:              Magnus Carlsson, Joe Hurd, Sigbjorn Finne, Joel Stanley, Brett Letner
Maintainer:          magnus@galois.com, joe@galois.com, sof@galois.com, bletner@contractor.galois.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable genLobster
  Main-is:           Main.hs
  ghc-options:       -fprof-auto
  Build-Depends:
                     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1

Executable selinux-lobster
  Main-is:           selinux-lobster.hs
  Build-Depends:
                     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1

Executable m4-lobster
  Main-is:           m4-lobster.hs
  Build-Depends:
                     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1

Executable  gen-lobster
  Main-is:           gen-lobster.hs
  Build-Depends:     array >= 0.1.0.0,
                     base >= 4,
                     containers >= 0.1.0.0,
                     directory >= 1,
                     filepath >= 1.1.0.0,
                     lobster >= 0.1,
                     mtl >= 1,
                     pretty >= 1,
                     regex-posix >= 0.71,
                     scd >= 0.1,
                     syb >= 0.1.0.0,
                     xml >= 1.3.2
