Name:                genLobster
Version:             0.1
Description:         shrimp to lobster reverse compilation
License:             AllRightsReserved
License-file:        LICENSE
Author:              Magnus Carlsson, Joe Hurd, Sigbjorn Finne, Joel Stanley, Brett Letner
Maintainer:          magnus@galois.com, joe@galois.com, sof@galois.com, bletner@contractor.galois.com
Build-Type:          Simple
Cabal-Version:       >= 1.10

Library
  hs-source-dirs:    src
  exposed-modules:   M4ToLobster
                     M4ToLobster2
                     M4ToLobster.Error
  ghc-options:       -Wall
  Build-Depends:     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1,
                     errors >= 1.4.5

Executable genLobster
  Main-is:           Main.hs
  ghc-options:       -fprof-auto
  Build-Depends:
                     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1

Executable selinux-lobster
  Main-is:           selinux-lobster.hs
  Build-Depends:
                     base >= 4,
                     pretty >= 1,
                     directory >= 1,
                     mtl >= 1,
                     containers >= 0.1.0.0,
                     lobster >= 0.1,
                     scd >= 0.1

Executable m4-lobster
  Main-is:           m4-lobster.hs
  ghc-options:       -rtsopts
  Build-Depends:     base >= 4,
                     scd >= 0.1,
                     containers >= 0.1.0.0,
                     directory >= 1,
                     mtl >= 1,
                     errors >= 1.4.5,
                     genLobster
