name:                iptables-lobster
version:             0.0.0.1
synopsis:            IPTables to Lobster translation
license:             AllRightsReserved
author:              Adam C. Foltzer
maintainer:          acfoltzer@galois.com
build-type:          Simple
cabal-version:       >=1.18

executable iptables-lobster
  main-is:             Main.hs
  build-depends:       base >= 4.6,
                       iptables-helpers >= 0.6,
                       scd
  hs-source-dirs:      main
  default-language:    Haskell2010