name:                iptables-lobster
version:             0.0.0.1
synopsis:            IPTables to Lobster translation
license:             AllRightsReserved
author:              Adam C. Foltzer
maintainer:          acfoltzer@galois.com
build-type:          Simple
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     IptablesToLobster
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.6,
                       containers >= 0.5,
                       iptables-helpers >= 0.6,
                       mtl >= 2.1,
                       scd,
                       transformers >= 0.3

executable iptables-lobster
  main-is:             Main.hs
  hs-source-dirs:      main
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.6,
                       containers >= 0.5,
                       iptables-helpers >= 0.6,
                       iptables-lobster,
                       mtl >= 2.1,
                       scd,
                       transformers >= 0.3

test-suite iptables-lobster-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base,
                       filepath,
                       HUnit,
                       iptables-helpers,
                       iptables-lobster,
                       scd,
                       test-framework,
                       test-framework-hunit