name:                v3spa-server
version:             0.5.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              James Bielman
maintainer:          jamesjb@galois.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable v3spa-server
  main-is:             Main.hs
  other-modules:       V3SPA.Server.Snap,
                       V3SPA.Server.Parse,
                       V3SPA.Server.Paths,
                       V3SPA.Server.Import.SELinux,
                       V3SPA.Server.Import.IPTables,
                       V3SPA.Server.Version
  build-depends:       base >=4.6 && <4.7,
                       containers >= 0.5,
                       transformers,
                       mtl >= 2.1,
                       MonadCatchIO-transformers >= 0.3,
                       lens >= 4.1,
                       filepath,
                       errors,
                       snap,
                       lobster-core,
                       iptables-lobster,
                       genLobster,
                       scd,
                       bytestring,
                       text,
                       aeson,
                       aeson-pretty,
                       directory >= 1.2
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
