name:                v3spa-server
version:             0.5.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              James Bielman
maintainer:          jamesjb@galois.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable v3spa-server
  main-is:             Main.hs
  other-modules:       V3SPA.Server.Snap,
                       V3SPA.Server.Parse,
                       V3SPA.Server.Paths,
                       V3SPA.Server.Project,
                       V3SPA.Server.ProjectResource,
                       V3SPA.Server.Import.SELinux,
                       V3SPA.Server.Import.IPTables,
                       V3SPA.Server.Version
  build-depends:       base >=4.6 && < 5,
                       containers ==0.5.*,
                       http-media,
                       transformers ==0.3.*,
                       mtl ==2.1.*,
                       MonadCatchIO-transformers ==0.3.*,
                       lens >=4.1 && <4.8,
                       filepath ==1.3.*,
                       errors ==1.4.*,
                       snap >=0.13,
                       snap-core,
                       lobster-core ==0.2.*,
                       lobster-selinux ==0.2.*,
                       iptables-lobster ==0.0.*,
                       genLobster ==0.2.*,
                       scd ==0.1.*,
                       system-filepath,
                       bytestring ==0.10.*,
                       text ==1.2.*,
                       aeson >=0.7,
                       aeson-pretty ==0.7.*,
                       directory ==1.2.*,
                       utf8-string
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable simple-import
  main-is:             test.hs
  build-depends:       base >=4.6 && < 5,
                       containers ==0.5.*,
                       http-media,
                       transformers ==0.3.*,
                       mtl ==2.1.*,
                       MonadCatchIO-transformers ==0.3.*,
                       lens >=4.1 && <4.8,
                       filepath ==1.3.*,
                       errors ==1.4.*,
                       snap >=0.13,
                       snap-core,
                       lobster-core ==0.2.*,
                       lobster-selinux ==0.2.*,
                       iptables-lobster ==0.0.*,
                       genLobster ==0.2.*,
                       scd ==0.1.*,
                       system-filepath,
                       bytestring ==0.10.*,
                       text ==1.2.*,
                       aeson >=0.7,
                       aeson-pretty ==0.7.*,
                       directory ==1.2.*,
                       utf8-string
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
