Name:                lobster-parser-test
Version:             0.1
Description:         test harness for lobster parsing
License:             AllRightsReserved
License-file:        LICENSE
Author:              Magnus Carlsson, Joe Hurd, Sigbjorn Finne, Joel Stanley, Brett Letner
Maintainer:          magnus@galois.com, joe@galois.com, sof@galois.com, bletner@contractor.galois.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Library {
}

Executable  lobster-parser-test {
Main-is:             Test.hs
Build-Depends:       lobster,haskell98,base
}
