Name:                scd-xml
Version:             0.1
Description:         scd-xml
License:             BSD3
License-file:        LICENSE
Author:              Magnus Carlsson, Joe Hurd, Sigbjorn Finne, Joel Stanley, Brett Letner
Maintainer:          magnus@galois.com, joe@galois.com, sof@galois.com, bletner@contractor.galois.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable   scd-xml {
extensions: CPP
Main-is:             XML.hs
ghc-options:         -idist/build
Build-Depends:       scd ==0.1.*,
                     base >=2.1.1 && <4.7,
                     pretty >=1.0.1.0 && <1.2,
                     regex-posix >=0.72.0.3 && <0.96,
                     xml >=1.3.4 && <1.4
}
