Name:                lobster-test
Version:             0.1
Description:         test harness for lobster library
License:             AllRightsReserved
License-file:        LICENSE
Author:              Magnus Carlsson, Joe Hurd, Sigbjorn Finne, Joel Stanley, Brett Letner
Maintainer:          magnus@galois.com, joe@galois.com, sof@galois.com, bletner@contractor.galois.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Library {
                     Symbion,Policy
}

Executable  lobster-test {
Main-is:             Main.hs
Build-Depends:       lobster,filepath >= 1.1.0.0,haskell98,base
}
